// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logger/config-serializer redacts sensitive fields 1`] = `
Object {
  "githubAppKey": "***********",
  "nottoken": "b",
  "token": "***********",
}
`;

exports[`logger/config-serializer simplifies releases 1`] = `
Object {
  "releases": Array [
    "1.0.0-rc.2",
    "1.0.0-rc.3",
  ],
}
`;

exports[`logger/config-serializer squashes templates 1`] = `
Object {
  "nottoken": "b",
  "prBody": "[Template]",
}
`;

exports[`logger/config-serializer suppresses content 1`] = `
Object {
  "content": "[content]",
}
`;
